<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#9cf"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:text="@string/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#0f2e4c"
        android:textAllCaps="true"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="32dp"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView"
        android:padding="@dimen/activity_vertical_margin"
        android:background="#fff">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="wrap_content"
                android:text="@string/departures"
                android:id="@+id/departures" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/arrivals"
                android:id="@+id/arrivals" />
        </LinearLayout>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_required"
            android:id="@+id/from"
            android:layout_gravity="center_horizontal" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination_optional"
            android:id="@+id/destination"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/go"
            android:layout_gravity="center_horizontal" />

        <TableLayout
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
